crates/oxc_react_compiler/tests/snapshots/async-property-branch-correlated-captures.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-property-branch-correlated-captures.js
---
function Component(t0) {
	const { cond } = t0;
	let count = 0;
	let cb = _temp;
	const safeAsync = _temp2;
	const asyncUsingCb = async () => {
		await 0;
		cb();
	};
	const obj = {};
	if (cond) {
		cb = () => count++;
		obj.run = safeAsync;
	} else {
		obj.run = asyncUsingCb;
	}
	obj.run();
	return null;
}
async function _temp2() {
	return null;
}
function _temp() {
	return null;
}
