crates/oxc_react_compiler/tests/snapshots/async-property-definite-overwrite.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-property-definite-overwrite.js
---
function Component(t0) {
	let count = 0;
	const cb = () => count++;
	const obj = { run: async () => {
		await 0;
		cb();
	} };
	obj.run = _temp;
	obj.run();
	return null;
}
function _temp() {
	return null;
}
