crates/oxc_react_compiler/tests/snapshots/async-property-unknown-key-definite-overwrite.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-property-unknown-key-definite-overwrite.js
---
function Component(t0) {
	const { key } = t0;
	let count = 0;
	const bad = async () => {
		await 0;
		cb();
	};
	const cb = () => count++;
	const safe = _temp;
	const obj = {};
	obj[key] = bad;
	obj.run = safe;
	obj.run();
	return null;
}
async function _temp() {
	return null;
}
