crates/oxc_react_compiler/tests/snapshots/async-rest-factory-length.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-rest-factory-length.js
---
function Component(t0) {
	let count = 0;
	const make = function make(...t1) {
		const callbacks = t1;
		return async () => {
			await 0;
			return callbacks.length;
		};
	};
	const run = make(() => count++);
	run();
	return null;
}
