crates/oxc_react_compiler/tests/snapshots/async-rest-parameter-safe-index.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-rest-parameter-safe-index.js
---
function Component() {
	let count = 0;
	const run = async function run(...t0) {
		const callbacks = t0;
		await 0;
		callbacks[0]();
	};
	run(_temp, () => count++);
	return null;
}
function _temp() {
	return null;
}
