crates/oxc_react_compiler/tests/snapshots/async-saved-object-ignores-replaced-binding.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-saved-object-ignores-replaced-binding.js
---
function Component() {
	let count = 0;
	let opts = { cb: _temp };
	const run = async () => {
		const saved = opts;
		await 0;
		saved.cb();
	};
	run();
	opts = { cb: () => count++ };
	return null;
}
function _temp() {
	return null;
}
